Fixes spacing in contact form.
Overrides label for answer field.
Removes extra definitions from forms.css

--- a/www/static/css/forms.css
+++ b/www/static/css/forms.css
@@ -10,16 +10,11 @@
 }
 
 .contact-form input{
-
     display: block;
 }
 
 .contact-form textarea{
 
-}
-
-.contact-form .simple-sum{
-    display: block;
 }
 
 .contact-form .errorlist{
